--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "wh_forwarder_bot",
   "version": "1.0.0",
+  "description": "Bot de WhatsApp que reenvía mensajes entre grupos según reglas de LISTA.xlsx",
   "main": "forwarder.js",
+  "type": "commonjs",
   "scripts": {
     "start": "node forwarder.js"
   },
   "dependencies": {
     "whatsapp-web.js": "^1.21.0",
     "xlsx": "^0.18.5",
-    "qrcode-terminal": "^0.12.0"
+    "qrcode-terminal": "^0.12.0",
+    "puppeteer": "^22.10.0"
   }
 }
