--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
   "name": "wh_forwarder_bot",
-  "version": "1.0.1",
-  "description": "Bot de WhatsApp que reenvía mensajes entre grupos según reglas de LISTA.xlsx",
+  "version": "1.0.2",
   "main": "forwarder.js",
-  "type": "commonjs",
   "scripts": {
+    "build": "npx puppeteer browsers install chrome",
     "start": "node forwarder.js"
   },
   "dependencies": {
     "whatsapp-web.js": "^1.21.0",
+    "puppeteer": "^22.11.0",
     "xlsx": "^0.18.5",
-    "qrcode-terminal": "^0.12.0",
-    "puppeteer": "^22.10.0"
+    "qrcode-terminal": "^0.12.0"
   }
 }
-
