--- a/package.json
+++ b/package.json
@@ -1,21 +1,15 @@
 {
   "name": "wh_forwarder_bot",
-  "version": "1.0.3",
-  "description": "Bot para reenviar mensajes de WhatsApp entre grupos según reglas del archivo Excel/JSON.",
+  "version": "1.1.0",
   "main": "forwarder.js",
   "scripts": {
-    "build": "npx puppeteer browsers install chrome && npm install",
-    "start": "node forwarder.js"
+    "start": "node forwarder.js",
+    "build": "npx puppeteer browsers install chrome"
   },
   "dependencies": {
     "whatsapp-web.js": "^1.21.0",
-    "puppeteer": "^22.11.0",
     "xlsx": "^0.18.5",
-    "qrcode-terminal": "^0.12.0"
-  },
-  "engines": {
-    "node": ">=18.0.0"
-  },
-  "author": "CARMONVE + GPT-5 Assistant",
-  "license": "MIT"
+    "qrcode-terminal": "^0.12.0",
+    "puppeteer": "^22.7.0"
+  }
 }
