--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "wh_forwarder_bot",
-  "version": "1.2.2",
+  "version": "1.3.0",
   "main": "forwarder.js",
   "scripts": {
-    "build": "npm install && npx puppeteer browsers install chrome",
+    "build": "npm install",
     "start": "node forwarder.js"
   },
   "dependencies": {
     "whatsapp-web.js": "^1.21.0",
-    "qrcode-terminal": "^0.12.0",
     "xlsx": "^0.18.5",
-    "puppeteer": "^22.11.0"
+    "qrcode-terminal": "^0.12.0",
+    "puppeteer": "^22.15.0"
   }
 }
