--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wh_forwarder_bot",
-  "version": "1.3.2",
+  "version": "1.3.3",
   "main": "forwarder.js",
   "scripts": {
     "prebuild": "rm -rf /opt/render/.cache/puppeteer || true && rm -rf node_modules/.cache || true",
@@ -8,9 +8,11 @@
     "start": "node forwarder.js"
   },
   "dependencies": {
+    "express": "^4.19.2",
     "whatsapp-web.js": "^1.21.0",
     "xlsx": "^0.18.5",
     "qrcode-terminal": "^0.12.0",
     "puppeteer": "^22.15.0"
   }
 }
+
