--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "start": "node forwarder.js"
   },
   "dependencies": {
-    "express": "^4.19.2",
     "whatsapp-web.js": "^1.21.0",
     "xlsx": "^0.18.5",
     "qrcode-terminal": "^0.12.0",
+    "qrcode": "^1.5.4",
     "puppeteer": "^22.15.0"
   }
 }
